--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BackEnd</title>
+
+    <style>
+        html {
+            background-color: grey;
+        }
+    </style>
 </head>
+
 <body>
     <h1>BackEnd</h1>
-    <script src="./promise/promise.js"></script>
+    <script src="./promise/4_promise_fetch.js"></script>
 </body>
+
 </html>
